# conniecs

./: .gitignore  Cargo.toml  README.md
conniecs-derive/: Cargo.toml
conniecs-derive/src/: aspect.rs  components.rs  lib.rs  services.rs  system.rs  systems.rs
src/: aspect.rs  component.rs  entity.rs  lib.rs  services.rs  storage.rs  traits.rs  world.rs
src/coroutines/: mod.rs
src/entity/: builder.rs  data.rs  iter.rs  manager.rs  mod.rs
src/system/: entity.rs  interact.rs  interval.rs  lazy.rs  mod.rs  watcher.rs
tests/: aspects.rs  test_basic_derive.rs
