[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
name = "conniecs-derive"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/Connicpu/conniecs"
documentation = "https://docs.rs/conniecs"
edition = "2018"
description = """
Provides proc macros for deriving most of the boilerplate in the `conniecs` crate
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["derive", "extra-traits"] }
quote = "0.6.8"
proc-macro2 = "0.4.20"
